0-common/2-k3s-embedded-ha/manifests/service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  selector:
    app: nginx
  ports:
    - port: 8080
      targetPort: 80
