0-common/2-k3s-embedded-ha/manifests/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  labels:
    app.kubernetes.io/name: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: nginx.k3s.test.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nginx
                port:
                  number: 8080
  tls:
    - hosts:
        - nginx.k3s.test.local
      secretName: nginx-tls-secret
